--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,165 +244,165 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment    
 
-  # run-migrations:
-  #   docker:
-  #     - image: circleci/node:13.8.0
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Install dependencies
-  #         become: yes
-  #         command: |
-  #           sudo apt-get update
-  #           sudo apt install tar gzip curl
-  #     - install_aws-cli
-  #     - restore_cache: 
-  #         keys: [backend-build]
-  #     - run:
-  #         name: Run migrations
-  #         command: |
-  #           cd backend
-  #           npm install
-  #           npm run migrations > migrations_dump.txt
-  #     - run:
-  #         name: Send migration results to kvdb.io
-  #         command: |
-  #           if grep -q "has been executed successfully" ~/project/backend/migrations_dump.txt
-  #           then
-  #             curl --insecure https://kvdb.io/17MCSDY3PCvqFDpduvuZXs/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-  #           fi
-  #     - destroy-environment
-  #     - revert-migrations      
+  run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          become: yes
+          command: |
+            sudo apt-get update
+            sudo apt install tar gzip curl
+      - install_aws-cli
+      - restore_cache: 
+          keys: [backend-build]
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send migration results to kvdb.io
+          command: |
+            if grep -q "has been executed successfully" ~/project/backend/migrations_dump.txt
+            then
+              curl --insecure https://kvdb.io/17MCSDY3PCvqFDpduvuZXs/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+            fi
+      - destroy-environment
+      - revert-migrations      
 
-  # deploy-frontend:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys: # ensures the ssh from environment variable is included
-  #         fingerprints:
-  #           - d6:42:2d:8a:59:90:35:de:87:7a:6a:00:6b:84:02:64
-  #     - attach_workspace:
-  #         at: ~/
-  #     - install_aws-cli
-  #     - install_ansible
-  #     - install_nodejs
-  #     - run:
-  #         name: Install dependencies
-  #         become: yes
-  #         command: |
-  #           sudo apt install tar gzip curl python3 -y
+  deploy-frontend:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - add_ssh_keys: # ensures the ssh from environment variable is included
+          fingerprints:
+            - d6:42:2d:8a:59:90:35:de:87:7a:6a:00:6b:84:02:64
+      - attach_workspace:
+          at: ~/
+      - install_aws-cli
+      - install_ansible
+      - install_nodejs
+      - run:
+          name: Install dependencies
+          become: yes
+          command: |
+            sudo apt install tar gzip curl python3 -y
 
-  #     - run:
-  #         name: Get backend url
-  #         command: |
-  #           export BACKEND_IP=$(aws ec2 describe-instances \
-  #           --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #           --filter Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
-  #           --output text
-  #           )
-  #           export API_URL="http://${BACKEND_IP}:3030"
-  #           echo "API_URL = ${API_URL}"
-  #           echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
-  #           cat frontend/.env
-  #     - run:
-  #         name: Deploy frontend objects
-  #         command: |
-  #           cd frontend
-  #           npm install
-  #           npm run build
-  #           tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
-  #           aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-  #     - destroy-environment
-  #     - revert-migrations      
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filter Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
+            --output text
+            )
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment
+      - revert-migrations      
                     
-  # deploy-backend:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #         fingerprints:
-  #           - d6:42:2d:8a:59:90:35:de:87:7a:6a:00:6b:84:02:64
-  #     - attach_workspace:
-  #         at: ~/
-  #     - install_aws-cli
-  #     - install_ansible
-  #     - install_nodejs
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt-get install python3 tar gzip -y
-  #     - run:
-  #         name: Deploy backend
-  #         command: |
-  #           cd backend
-  #           npm i
-  #           npm run build
-  #           cd ..
-  #           # Zip the directory
-  #           tar -C backend -czvf artifact.tar.gz .
-  #           mkdir -p ~/project/.circleci/ansible/roles/deploy/files 
-  #           cp -p artifact.tar.gz .circleci/ansible/roles/deploy/files
-  #           cd .circleci/ansible
-  #           echo "Contents  of the inventory.txt file is -------"
-  #           cat inventory.txt
-  #           ansible-playbook -i inventory.txt deploy-backend.yml
-  #     - destroy-environment
-  #     - revert-migrations  
+  deploy-backend:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - d6:42:2d:8a:59:90:35:de:87:7a:6a:00:6b:84:02:64
+      - attach_workspace:
+          at: ~/
+      - install_aws-cli
+      - install_ansible
+      - install_nodejs
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get install python3 tar gzip -y
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            # Zip the directory
+            tar -C backend -czvf artifact.tar.gz .
+            mkdir -p ~/project/.circleci/ansible/roles/deploy/files 
+            cp -p artifact.tar.gz .circleci/ansible/roles/deploy/files
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment
+      - revert-migrations  
 
-  # smoke-test:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - checkout
+  smoke-test:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
 
-  #     - install_nodejs
-  #     - install_aws-cli
-  #     - run:
-  #         name: Install dependencies
-  #         command: |
-  #           sudo apt-get install python3 tar gzip -y
-  #     - run:
-  #         name: Backend smoke test.
-  #         command: |
-  #           # BACKEND_IP=$(aws ec2 describe-instances \
-  #           #   --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" \
-  #           #   --query "Reservations[*].Instances[*].PublicIpAddress" \
-  #           #   --output text)
-  #           # echo "http://${BACKEND_IP}:3030/api/status"
-  #           # if curl "http://${BACKEND_IP}:3030/api/status" | grep "ok"
-  #           # then 
-  #           #   return 0
-  #           # else 
-  #           #   return 1
-  #           # fi
-  #           BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
-  #             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-  #             --output text)
-  #           export API_URL="http://${BACKEND_PUBLIC_IP}:3030"
-  #           echo ${BACKEND_PUBLIC_IP}
-  #           echo ${API_URL}
-  #           if curl -v --connect-timeout 30 "${API_URL}/api/status" | grep "ok"
-  #           then
-  #             exit 0
-  #           else
-  #             exit 1
-  #           fi
-  #     - run:
-  #         name: Frontend smoke test.
-  #         command: |
-  #           FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
-  #           echo $FRONTEND_WEBSITE
-  #           if curl -s $FRONTEND_WEBSITE | grep "Welcome"
-  #           then
-  #             exit 0
-  #           else
-  #             exit 1
-  #           fi
-  #     - destroy-environment
-  #     - revert-migrations   
+      - install_nodejs
+      - install_aws-cli
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get install python3 tar gzip -y
+      - run:
+          name: Backend smoke test.
+          command: |
+            # BACKEND_IP=$(aws ec2 describe-instances \
+            #   --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" \
+            #   --query "Reservations[*].Instances[*].PublicIpAddress" \
+            #   --output text)
+            # echo "http://${BACKEND_IP}:3030/api/status"
+            # if curl "http://${BACKEND_IP}:3030/api/status" | grep "ok"
+            # then 
+            #   return 0
+            # else 
+            #   return 1
+            # fi
+            BACKEND_PUBLIC_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --output text)
+            export API_URL="http://${BACKEND_PUBLIC_IP}:3030"
+            echo ${BACKEND_PUBLIC_IP}
+            echo ${API_URL}
+            if curl -v --connect-timeout 30 "${API_URL}/api/status" | grep "ok"
+            then
+              exit 0
+            else
+              exit 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            FRONTEND_WEBSITE=http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website.${AWS_DEFAULT_REGION}.amazonaws.com
+            echo $FRONTEND_WEBSITE
+            if curl -s $FRONTEND_WEBSITE | grep "Welcome"
+            then
+              exit 0
+            else
+              exit 1
+            fi
+      - destroy-environment
+      - revert-migrations   
 
 #   cloudfront-update:
 #     docker:
@@ -475,16 +475,16 @@ workflows:
           filters:
             branches:
               only: [master]
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure]
-      # - run-migrations:
-      #     requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #     requires: [run-migrations]
-      # - deploy-backend:
-      #     requires: [run-migrations]
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend]
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]
 #       - cloudfront-update:
 #           requires: [smoke-test]
 #       - cleanup:
