--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -464,11 +464,10 @@ jobs:
             --stack-status-filter CREATE_COMPLETE \
             --no-paginate --output text)
             echo Stack names: "${STACKS[@]}"
-      - run:
-          name: Remove old stacks and files
-          command: |
+      
             if [[ "${CIRCLE_WORKFLOW_ID}" != "${OldWorkflowID}" ]]
             then
+              echo "Removing old stack"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
